# audio-echo-cancellation

flutter_package/: ffigen.yaml  pubspec.yaml
flutter_package/.dart_tool/: package_config.json  package_config_subset
flutter_package/lib/: barge_detected.dart  bindings_generated.dart
flutter_package/lib/lib_barge_detected.so.dSYM/Contents/: Info.plist
flutter_package/lib/lib_barge_detected.so.dSYM/Contents/Resources/Relocations/aarch64/: lib_barge_detected.so.yml
flutter_package/src/: CMakeLists.txt  barge_detected.cpp  barge_detected.h
